--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </ul>
         </nav>
     </header>
+<!--     for my purpose code -->
     <section class="hero">
         <div class="hero-content">
             <h1>Hi, I'm Davinder Singh</h1>
