--- a/projects.html
+++ b/projects.html
@@ -23,19 +23,19 @@
             <h2>My Projects</h2>
             <div class="project-list">
                 <div class="project-card">
-                    <img src="./images/todo-app-thumbnail.png.webp" alt="To-Do List App">
+                    <img src="todo-app-thumbnail.png.webp" alt="To-Do List App">
                     <h3>To-Do List App</h3>
                     <p>A simple task management app.</p>
                     <a href="./projects/To-Do list/index.html" target="_blank" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="./images/quote.webp" alt="Quote Generator">
+                    <img src="quote.webp" alt="Quote Generator">
                     <h3>Random Quote Generator</h3>
                     <p>Generates random motivational quotes.</p>
                     <a href="./projects/quote-generator/index.html" target="_blank" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="./images/clock.webp" alt="Digital Clock">
+                    <img src="clock.webp" alt="Digital Clock">
                     <h3>Digital Clock</h3>
                     <p>Displays real-time digital clock.</p>
                     <a href="./projects/digital-clock/index.html" target="_blank" class="btn">View Project</a>
@@ -43,19 +43,19 @@
             </div>
             <div class="project-list">
                 <div class="project-card">
-                    <img src="./images/weather-app.webp" alt="Weather App">
+                    <img src="weather-app.webp" alt="Weather App">
                     <h3>Weather App</h3>
                     <p>Shows real-time weather updates.</p>
                     <a href="./projects/weather-app/index.html" target="_blank" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="./images/Candy-Crush.webp" alt="Candy Crush">
+                    <img src="Candy-Crush.webp" alt="Candy Crush">
                     <h3>Candy Crush</h3>
                     <p>A fun and colorful Candy Crush clone game.</p>
                     <a href="./projects/candy-crush/index.html" target="_blank" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="./images/Electro-shopie.webp" alt="Electro Shopiee">
+                    <img src="Electro-shopie.webp" alt="Electro Shopiee">
                     <h3>New Project</h3>
                     <p>Electro Shopiee</p>
                     <a href="./projects/electric/home.html" target="_blank" class="btn">View Project</a>
