--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,8 @@
                 </div>
                 <div class="project-card">
                     <img src="Electro-shopie.webp" alt="Electro Shopiee">
-                    <h3>New Project</h3>
-                    <p>Electro Shopiee</p>
+                    <h3>Electro Shopiee</h3>
+                    <p>A Simple e-commerce Website</p>
                     <a href="./projects/electric/home.html" target="_blank" class="btn">View Project</a>
                 </div>
             </div>
