--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <section class="about">
         <div class="about-container">
-            <img src="My Pic.jpeg" alt="Davinder" class="profile-pic">
+            <img src="logo.jpeg" alt="Davinder" class="profile-pic">
             <div class="about-text">
                 <h2>Who Am I?</h2>
                 <p>Hi! I'm Davinder Singh, a passionate web developer with expertise in JavaScript, Java, and MySQL. I specialize in building dynamic and user-friendly web applications that provide seamless experiences.</p>
