--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Davinder Singh</div>
+<!--         <div class="logo">Davinder Singh</div> -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
