--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,9 @@
         <ul class="social-links">
             <li><a href="https://www.linkedin.com/in/davinder-singh-820424269/" target="_blank">LinkedIn</a></li>
         </ul>
+        <ul class="social-links">
+            <li><a href="https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1" target="_blank">Instagram</a></li>
+        </ul>
     </section>
 
     <footer>
